<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity" android:background="?attr/colorButtonNormal">

    <ImageView
            android:layout_width="360dp"
            android:layout_height="380dp" app:srcCompat="@drawable/icons8_chat_room_64"
            android:id="@+id/imageView2"
            android:contentDescription="@string/message_icon" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp" android:layout_marginStart="10dp" android:layout_marginTop="10dp"
            android:layout_marginBottom="341dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/who_are_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginBottom="274dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:textAlignment="center"
            android:textColor="@android:color/black" android:textSize="30sp" android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="101dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="101dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/login_input"
            android:layout_marginTop="97dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="109dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/login"
            android:background="@android:color/background_light"
            android:importantForAutofill="no"/>
    <Button
            android:text="@string/set_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/set_login" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/login_input" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="45dp"/>
</android.support.constraint.ConstraintLayout>