<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.EditMessageAcitivty">

    <EditText
            android:autofillHints="@android:string/autofill"
            android:hint="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_login"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="63dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="135dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.153"
            />
    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="41dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="219dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="134dp"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toTopOf="@+id/edit_login"
            android:textSize="20sp"/>
    <EditText
            android:autofillHints="@android:string/autofill"
            android:hint="@string/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="72dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="126dp"
            android:layout_marginBottom="332dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_login"/>
    <TextView
            android:text="@string/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText33" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="134dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="218dp" android:layout_marginBottom="37dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_content" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_login"
            android:textSize="20sp"/>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="63dp" app:layout_constraintEnd_toStartOf="@+id/delete_button"
            android:layout_marginEnd="69dp" android:layout_marginBottom="197dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="182dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_content"/>
    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button" android:layout_marginTop="181dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="103dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="198dp" app:layout_constraintStart_toEndOf="@+id/update_button"
            android:layout_marginStart="70dp"/>
</android.support.constraint.ConstraintLayout>